fix alignment

--- a/source/_static/default.css
+++ b/source/_static/default.css
@@ -209,9 +209,6 @@ div.maindescription p {
 }
 
 ul.mainlinks { 
-  padding-left: 15%;
-  padding-top: 10px;
-  padding-bottom: 10px;
   margin: 0;
   list-style-type: none;
 }
@@ -222,7 +219,7 @@ ul.mainlinks li {
 
 ul.mainlinks li a { 
   float: left;
-  padding: 10px;
+  padding: 15px;
   text-decoration: none;
 }
 
@@ -234,11 +231,13 @@ ul.mainlinks li a span {
 ul.mainlinks li a span.linktitle {
     font-size: 22px;
     font-weight: bold;
+    padding-bottom: 15px;
 }
 
 ul.mainlinks li a span.linkdesc {
     font-size: 10px;
     display: block;
+    padding-top: 10px;
 }
 
 div.testimonials p {
